Improve Advanced Search index exception handling - CLM-38670 (#15182)